Fix admin API logs endpoint to read from log files
- Changed getServiceLogs() to read from ~/.local/log/cluster/*.log
- Previously used journalctl which showed systemd output instead
- Now consistent with getLogs() behavior for node logs

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>